Save local changes: reports/login/frontend fixes